// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute computePrice endpoint returns error if operand1 has invalid input 1`] = `
{
  "error": {
    "message": "Input payload for "operand1Input" is not valid JSON.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute computePrice endpoint returns error if operand1 has zero price 1`] = `
{
  "errorMessage": "operand1Median result is zero",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute computePrice endpoint returns error if operand2 has invalid input 1`] = `
{
  "error": {
    "message": "Input payload for "operand2Input" is not valid JSON.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute computePrice endpoint returns error if operand2 has zero price 1`] = `
{
  "errorMessage": "operand2Median result is zero",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute computePrice endpoint returns failure when upstream responses are missing decimals field 1`] = `
{
  "errorMessage": "Failed to extract consistent decimals from field "decimals"",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute computePrice endpoint returns failure with mismatched operand1Decimals 1`] = `
{
  "errorMessage": "Failed to extract consistent decimals from field "decimals"",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute computePrice endpoint returns success with decimal scaling for divide operation 1`] = `
{
  "data": {
    "operand1Decimals": 2,
    "operand1Result": "12.5",
    "operand2Decimals": 2,
    "operand2Result": "10",
    "result": "1250000000000000000",
    "resultDecimals": 18,
  },
  "result": "1250000000000000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute computePrice endpoint returns success with decimal scaling for multiply operation 1`] = `
{
  "data": {
    "operand1Decimals": 1,
    "operand1Result": "12.5",
    "operand2Decimals": 1,
    "operand2Result": "10",
    "result": "125000000",
    "resultDecimals": 8,
  },
  "result": "125000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute computePrice endpoint should return error for minimum number of operand 1 sources 1`] = `
{
  "errorMessage": "Insufficient responses: got 1, required 2",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute computePrice endpoint should return error for minimum number of operand 2 sources 1`] = `
{
  "errorMessage": "Insufficient responses: got 1, required 2",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 0,
    "providerDataRequestedUnixMs": 0,
  },
}
`;

exports[`execute computePrice endpoint should return error for missing source 1`] = `
{
  "error": {
    "message": "Not enough sources configured. Make sure 1 of the following are set in the environment: COINPAPRIKA_ADAPTER_URL",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute computePrice endpoint should return number > e+21 as fixed point rather than exponential 1`] = `
{
  "data": {
    "operand1Result": "17.15",
    "operand2Result": "1000000000000000000000000",
    "result": "17150000000000000000000000",
  },
  "result": "17150000000000000000000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute computePrice endpoint should return success for divide 1`] = `
{
  "data": {
    "operand1Result": "12.5",
    "operand2Result": "10",
    "result": "1.25",
  },
  "result": "1.25",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute computePrice endpoint should return success for legacy divisions 1`] = `
{
  "data": {
    "operand1Result": "20",
    "operand2Result": "7.5",
    "result": "2.6666666666666666666666666666666666666666666666667",
  },
  "result": "2.6666666666666666666666666666666666666666666666667",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute computePrice endpoint should return success for multiply 1`] = `
{
  "data": {
    "operand1Result": "20",
    "operand2Result": "10",
    "result": "200",
  },
  "result": "200",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute computePrice endpoint should return success for partial source success 1`] = `
{
  "data": {
    "operand1Result": "20",
    "operand2Result": "5",
    "result": "4",
  },
  "result": "4",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
